; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_meta.c_cmd_meta_add_fileline.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_meta.c_cmd_meta_add_fileline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32)* @cmd_meta_add_fileline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmd_meta_add_fileline(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca [64 x i8], align 16
  %9 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = getelementptr inbounds [64 x i8], [64 x i8]* %8, i64 0, i64 0
  %12 = call i8* @sdb_itoa(i32 %10, i8* %11, i32 16)
  store i8* %12, i8** %9, align 8
  %13 = load i8*, i8** %9, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %39

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @sdb_add(i32* %17, i8* %18, i8* %19, i32 0)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %27, label %22

22:                                               ; preds = %16
  %23 = load i32*, i32** %5, align 8
  %24 = load i8*, i8** %9, align 8
  %25 = load i8*, i8** %6, align 8
  %26 = call i32 @sdb_set(i32* %23, i8* %24, i8* %25, i32 0)
  br label %27

27:                                               ; preds = %22, %16
  %28 = load i32*, i32** %5, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = load i8*, i8** %9, align 8
  %31 = call i32 @sdb_add(i32* %28, i8* %29, i8* %30, i32 0)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %38, label %33

33:                                               ; preds = %27
  %34 = load i32*, i32** %5, align 8
  %35 = load i8*, i8** %6, align 8
  %36 = load i8*, i8** %9, align 8
  %37 = call i32 @sdb_set(i32* %34, i8* %35, i8* %36, i32 0)
  br label %38

38:                                               ; preds = %33, %27
  store i32 0, i32* %4, align 4
  br label %39

39:                                               ; preds = %38, %15
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i8* @sdb_itoa(i32, i8*, i32) #1

declare dso_local i32 @sdb_add(i32*, i8*, i8*, i32) #1

declare dso_local i32 @sdb_set(i32*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
